Upgraded to Spring boot 4